Begin router templating
