# swagger/swagger.yml
@@ -9,8 +9,125 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-basePath: /v1
+basePath: /comic
 paths:
+  //:
+    get:
+      tags:
+      - ""
+      description: get Comic
+      operationId: ComicController.GetAll
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Comic'
+        "403":
+          description: ""
+    post:
+      tags:
+      - ""
+      description: create Comic
+      operationId: ComicController.Create
+      parameters:
+      - in: body
+        name: body
+        description: body for Comic content
+        required: true
+        schema:
+          $ref: '#/definitions/.Comic'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Comic'
+        "403":
+          description: body is empty
+  //{id}:
+    get:
+      tags:
+      - ""
+      description: get Comic by id
+      operationId: ComicController.GetOne
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Comic'
+        "403":
+          description: :id is empty
+    put:
+      tags:
+      - ""
+      description: update the Comic
+      operationId: ComicController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for Comic content
+        required: true
+        schema:
+          $ref: '#/definitions/.Comic'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Comic'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - ""
+      description: delete the Comic
+      operationId: ComicController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
   /chapter/:
     get:
       tags:
@@ -586,6 +703,163 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /login/:
+    get:
+      tags:
+      - login
+      description: get Login
+      operationId: LoginController.GetAll
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Login'
+        "403":
+          description: ""
+    post:
+      tags:
+      - login
+      description: create Login
+      operationId: LoginController.Create
+      parameters:
+      - in: body
+        name: body
+        description: body for Login content
+        required: true
+        schema:
+          $ref: '#/definitions/.Login'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Login'
+        "403":
+          description: body is empty
+  /login/{id}:
+    get:
+      tags:
+      - login
+      description: get Login by id
+      operationId: LoginController.GetOne
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Login'
+        "403":
+          description: :id is empty
+    put:
+      tags:
+      - login
+      description: update the Login
+      operationId: LoginController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for Login content
+        required: true
+        schema:
+          $ref: '#/definitions/.Login'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Login'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - login
+      description: delete the Login
+      operationId: LoginController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
+  /logout/:
+    post:
+      tags:
+      - logout
+      description: Logout
+      operationId: LogoutController.Logout
+      parameters:
+      - in: body
+        name: body
+        description: body for Logout content
+        required: true
+        schema:
+          $ref: '#/definitions/.Logout'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Logout'
+        "403":
+          description: body is empty
+  /reports/:
+    post:
+      tags:
+      - reports
+      description: create Signup
+      operationId: SignupController.Create
+      parameters:
+      - in: body
+        name: body
+        description: body for Signup content
+        required: true
+        schema:
+          $ref: '#/definitions/.Signup'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Signup'
+        "403":
+          description: body is empty
   /series/:
     get:
       tags:
@@ -1046,6 +1320,26 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /signup/:
+    post:
+      tags:
+      - reports
+      description: create Signup
+      operationId: SignupController.Create
+      parameters:
+      - in: body
+        name: body
+        description: body for Signup content
+        required: true
+        schema:
+          $ref: '#/definitions/.Signup'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/.Signup'
+        "403":
+          description: body is empty
   /tag/:
     get:
       tags:
@@ -1277,6 +1571,16 @@ paths:
         "403":
           description: id is empty
 definitions:
+  .Comic:
+    type: object
+  .Login:
+    type: object
+  .Logout:
+    type: object
+  .Search:
+    type: object
+  .Signup:
+    type: object
   models.Chapter:
     title: Chapter
     type: object
@@ -1402,6 +1706,20 @@ definitions:
       Username:
         type: string
 tags:
+- description: |
+    ComicController operations for Comic
+- name: logout
+  description: |
+    LogoutController operations for Logout
+- name: login
+  description: |
+    LoginController operations for Login
+- name: signup
+  description: |
+    SignupController operations for Signup
+- name: reports
+  description: |
+    SignupController operations for Signup
 - name: series
   description: |
     SeriesController operations for Series
